Temporary fix for .block--background-image.block-promotion--text on narrow screens

--- a/src/resources/sass/blocks/_promotion.scss
+++ b/src/resources/sass/blocks/_promotion.scss
@@ -14,6 +14,12 @@
 		min-height: 0;
 	}
 
+	&.block--background-image.block-promotion--text {
+		@media screen and (max-width: $screen-sm) {
+			min-height: 220px;
+		}
+	}
+
 	p {
 		margin: $margin-small 0 0 0;
 
